--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -330,6 +330,22 @@ team-display {
 .similar-section {
 }
 
+stage-display {
+    * > unit-display {
+        display: inline-block;
+
+        .unit-button {
+            margin: 0;
+        }
+    }
+
+    > button {
+        padding-top: 0;
+        padding-bottom: 0;
+        line-height: 2.95em;
+    }
+}
+
 team-box {
     position: relative;
 
@@ -402,6 +418,7 @@ team-box {
     }
 
     .submission {
+        @extend .truncate;
         font-size: smaller;
 
         user-display {
