--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -18,6 +18,10 @@
                     <label for="stageInput">Stage</label>
                     <stage-display id="stageInput" editable="true" stage-id.two-way="stageId"></stage-display>
                 </div>
+                <div class="form-group">
+                    <label for="invasionInput">Invasion</label>
+                    <stage-display id="invasionInput" editable="true" invasion="true" stage-id.two-way="invasionId"></stage-display>
+                </div>
             </fieldset>
         </div>
         <div class="row">
