Some invasion styling.

--- a/Source/TreasureGuide.Web/src/css/colors.scss
+++ b/Source/TreasureGuide.Web/src/css/colors.scss
@@ -15,6 +15,7 @@ $black-color: #000000;
 $grey-color: #D1D1D1;
 $donorStart-color: #B41313;
 $donorEnd-color: #B45C13;
+$invasion-color: darken($danger-color,5%);
 
 body {
     background-color: $background-color;
@@ -72,6 +73,7 @@ body {
 @include makeColor("grey",$grey-color);
 @include makeColor("donorStart",$donorStart-color);
 @include makeColor("donorEnd",$donorEnd-color);
+@include makeColor("invasion",$invasion-color);
 
 a {
     @extend ._primaryText;
