Adding more support messages.

--- a/Source/TreasureGuide.Web/src/views/support/index.html
+++ b/Source/TreasureGuide.Web/src/views/support/index.html
@@ -2,8 +2,53 @@
     <h1>Support</h1>
     <p>We'd like to take a moment to thank all of our incredible supporters who make Nakama Network possible!</p>
 
+    <div class="row">
+        <dl>
+            <dt>
+                The <a href="https://optc-db.github.io/" target="_blank">OPTC-db</a> team
+            </dt>
+            <dd>
+                ...for their constant efforts to gather data on units, stages, ships, and
+                every other aspect of One Piece: Treasure Cruise. Without their work Nakama
+                Network could not exist!
+            </dd>
+
+            <dt>
+                <a href="https://www.reddit.com/u/ASAPSlefty" target="_blank">ASAPSlefty</a>
+            </dt>
+            <dd>
+                Whose original <a href="http://slefty.herokuapp.com/">Team Database</a> served as inspiration
+                for many of the features on this site.
+            </dd>
+
+            <dt>
+                <a href="https://www.reddit.com/u/irvollo" target="_blank">Irvollo</a>
+            </dt>
+            <dd>
+                Whose <a href="https://optc-teams.herokuapp.com/">Team Database</a> inspired
+                the video integration on this site.
+            </dd>
+
+            <dt>
+                <a href="https://www.reddit.com/u/WackyPirates" target="_blank">WackyPirates</a>
+            </dt>
+            <dd>
+                For maintaining the awesome <a href="https://docs.google.com/spreadsheets/d/1hFQiqF-KHVSlvB0B0aV0hfZt0cRD-ISkHMmUVPNM7ss/edit#gid=374998817">Team Spreadsheet</a>
+                which provided a great deal of test data for the early stages of Nakama Network to work with.
+            </dd>
+
+            <dt>
+                <a href="https://www.reddit.com/r/OnePieceTC" target="_blank">/r/OnePieceTC</a>
+            </dt>
+            <dd>
+                The community that has provided so many ideas, suggestions, feedback, and knowledge for
+                Nakama Network to build off of.
+            </dd>
+        </dl>
+    </div>
+
     <h4>Donations</h4>
-    <p>And a big shout-out to everyone who's donated to support Nakama Network!</p>
+    <p>Another big shout-out to everyone who's donated to support Nakama Network!</p>
 
     <loading-area if.bind="loading"></loading-area>
     <div if.bind="!loading">
