WRONG EMAIL DUDE.

--- a/Source/TreasureGuide.Web/src/views/donate/update.html
+++ b/Source/TreasureGuide.Web/src/views/donate/update.html
@@ -20,7 +20,7 @@
         <p>
             If you made your donation without being logged in and
             have or create a Nakama Network account, please contact
-            <a href="mailto:nakama-db@gmail.com" target="_blank">nakama-db@gmail.com</a>
+            <a href="mailto:nakama.db@gmail.com" target="_blank">nakama-db@gmail.com</a>
             with your Nakama Network username and invoice id to claim
             your donor perks!
         </p>
