--- a/Source/TreasureGuide.Web/src/views/error.html
+++ b/Source/TreasureGuide.Web/src/views/error.html
@@ -8,7 +8,7 @@
 
         <p>
             Please contact
-            <a href="mailto:nakama-db@gmail.com" target="_blank">nakama-db@gmail.com</a>
+            <a href="mailto:nakama.db@gmail.com" target="_blank">nakama-db@gmail.com</a>
             if the problem persists, or message us on our <a href="https://discord.gg/vtAeMas" target="_blank">Discord</a>.
         </p>
     </div>
