Updating some things.

--- a/Source/TreasureGuide.Web/src/views/boring/tos.html
+++ b/Source/TreasureGuide.Web/src/views/boring/tos.html
@@ -38,6 +38,6 @@
     </h4>
     <p>
         If you have any questions or suggestions about our Terms of Service, do not hesitate to contact us at
-        <a href="mailto:nakama.db@gmail.com">nakama-db@gmail.com</a>.
+        <a href="mailto:nakama.db@gmail.com">nakama.db@gmail.com</a>.
     </p>
 </template>
