--- a/Source/TreasureGuide.Web/src/views/error.html
+++ b/Source/TreasureGuide.Web/src/views/error.html
@@ -4,12 +4,12 @@
         <p>
             ${message}
         </p>
-        <a href="/" class="button _primary">Return Home</a>
-
         <p>
             Please contact
-            <a href="mailto:nakama.db@gmail.com" target="_blank">nakama-db@gmail.com</a>
+            <a href="mailto:nakama.db@gmail.com" target="_blank">nakama.db@gmail.com</a>
             if the problem persists, or message us on our <a href="https://discord.gg/vtAeMas" target="_blank">Discord</a>.
         </p>
+        <hr />
+        <a href="/" class="button _white">Return Home</a>
     </div>
 </template>
