--- a/Source/TreasureGuide.Web/src/views/profile/index.html
+++ b/Source/TreasureGuide.Web/src/views/profile/index.html
@@ -10,7 +10,7 @@
         </div>
         <div class="row" if.bind="donor">
             <em>
-                This user gets a shiny title and some other perks because they <a route-href="route: supprt">donated to Nakama Network's development!</a>
+                This user gets a shiny title and some other perks because they <a route-href="route: support">donated to Nakama Network's development!</a>
             </em>
         </div>
         <a if.bind="canEdit" class="button _primary" route-href="route: profileEdit; params.bind: { id: id }">
