Adding Azure execution strategy for safety purposes.

--- a/Source/TreasureGuide.Entities/TreasureEntities.Context.tt
+++ b/Source/TreasureGuide.Entities/TreasureEntities.Context.tt
@@ -53,6 +53,7 @@ using System.Linq;
 }
 #>
 
+[DbConfigurationType(typeof(TreasureEntitiesConfiguration))] 
 <#=Accessibility.ForType(container)#> partial class <#=code.Escape(container)#> : DbContext
 {
     public <#=code.Escape(container)#>()
