Updating CSS of similar teams.

--- a/Source/TreasureGuide.Web/src/views/teams/detail.html
+++ b/Source/TreasureGuide.Web/src/views/teams/detail.html
@@ -89,14 +89,12 @@
         </div>
         <div class="row" if.bind="similar.length > 0">
             <hr />
-            <fieldset>
-                <legend>Similar Teams</legend>
-                <div class="similar-section">
-                    <div class="col m4" repeat.for="team of similar">
-                        <team-box team.bind="team"></team-box>
-                    </div>
+            <h4>Similar Teams</h4>
+            <div class="similar-section">
+                <div class="col m4" repeat.for="team of similar">
+                    <team-box team.bind="team"></team-box>
                 </div>
-            </fieldset>
+            </div>
         </div>
     </div>
 </template>
