Fixing some tooltip issues and reset issues.

--- a/Source/TreasureGuide.Web/src/views/boxes/detail.html
+++ b/Source/TreasureGuide.Web/src/views/boxes/detail.html
@@ -46,6 +46,7 @@
                 <unit-display repeat.for="unit of featuredUnits"
                               model.bind="unit"
                               info="true"
+                              tooltip="true"
                               box.bind="box"
                               show-box-flags="true"
                               size="huge">
@@ -65,6 +66,7 @@
                         <unit-display repeat.for="unit of units"
                                       model.bind="unit"
                                       info="true"
+                                      tooltip="true"
                                       box.bind="box"
                                       show-box-flags="true"
                                       size="large">
