--- a/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -46,14 +46,14 @@
             <div class="form-group">
                 <label asp-for="ToS">
                     <input asp-for="ToS" type="checkbox" />
-                    <span class="-label-body">I agree to the <a href="/#/tos" target="_blank">Terms of Service</a></span>
+                    <span class="-label-body">I agree to the <a href="/tos" target="_blank">Terms of Service</a></span>
                 </label>
                 <span asp-validation-for="ToS"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Privacy">
                     <input asp-for="Privacy" type="checkbox" />
-                    <span class="-label-body">I agree to the <a href="/#/privacy" target="_blank">Privacy Policy</a></span>
+                    <span class="-label-body">I agree to the <a href="/privacy" target="_blank">Privacy Policy</a></span>
                 </label>
                 <span asp-validation-for="Privacy"></span>
             </div>
