--- a/Source/TreasureGuide.Web/src/views/support/index.html
+++ b/Source/TreasureGuide.Web/src/views/support/index.html
@@ -44,6 +44,14 @@
                 The community that has provided so many ideas, suggestions, feedback, and knowledge for
                 Nakama Network to build off of.
             </dd>
+
+            <dt>
+                <a href="https://www.reddit.com/u/ArisenVendetta" target="_blank">ArisenVendetta</a>
+            </dt>
+            <dd>
+                For creating and maintaining <a href="https://www.reddit.com/u/optclinkbot" target="_blank">optclinkbot</a>
+                and working with us to expand its functionality to support Nakama Network!
+            </dd>
         </dl>
     </div>
 
