--- a/Source/TreasureGuide.Web/src/views/teams/detail.html
+++ b/Source/TreasureGuide.Web/src/views/teams/detail.html
@@ -2,8 +2,8 @@
     <loading-area if.bind="loading"></loading-area>
     <div if.bind="!loading" with.bind="team">
         <h1>${name}</h1>
-        <div class="row" auth-req="Moderator, Administrator">
-            <team-reports team.bind="team"></team-reports>
+        <div class="row">
+            <team-reports auth-req="Moderator, Administrator" team.bind="team"></team-reports>
             <div class="alert _danger" if.bind="deleted">
                 This team has been deleted.
             </div>
