--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-group">
                     <label for="invasionInput">Invasion</label>
-                    <stage-display id="invasionInput" editable="true" invasion="true" stage-id.two-way="invasionId"></stage-display>
+                    <stage-display id="invasionInput" editable="true" invasion="true" stage-id.two-way="invasionId" size="tiny"></stage-display>
                 </div>
             </fieldset>
         </div>
