--- a/Source/TreasureGuide.Web/src/views/teams/import.html
+++ b/Source/TreasureGuide.Web/src/views/teams/import.html
@@ -23,7 +23,7 @@
                     <input type="text" value.bind="import.calc" class="_width100" placeholder="OPTC-DB Export Link" />
                 </td>
                 <td>
-                    <stage-display stage-id.two-way="import.stage" editable="true"></stage-display>
+                    <stage-display stage-id.two-way="import.stage" editable="true" size="small"></stage-display>
                 </td>
                 <td>
                     <textarea type="text" value.bind="import.desc" class="_width100" placeholder="Description"></textarea>
