--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -628,7 +628,7 @@ team-box {
 .schedule-box {
     @extend .note;
 
-    span {
+    span:not(.tooltiptext) {
         vertical-align: middle;
         height: 100%;
     }
