--- a/Source/TreasureGuide.Web/src/views/index.html
+++ b/Source/TreasureGuide.Web/src/views/index.html
@@ -13,8 +13,8 @@
                 <input id="globalCheckbox" type="checkbox" checked.bind="globalSchedule" />
                 <i class="fa fa-fw fa-globe"></i>
             </label>
-            <schedule-display schedule.bind="currentSchedule"></schedule-display>
-            <schedule-display schedule.bind="upcomingSchedule" upcoming="true"></schedule-display>
+            <schedule-display schedule.bind="currentSchedule" global.bind="globalSchedule"></schedule-display>
+            <schedule-display schedule.bind="upcomingSchedule" upcoming="true" global.bind="globalSchedule"></schedule-display>
             <span class="schedule-credit">
                 Powered by <a href="https://optc-agenda.github.io/" target="_blank">OPTC-Agenda</a>
             </span>
