--- a/Source/TreasureGuide.Web/src/views/support/index.html
+++ b/Source/TreasureGuide.Web/src/views/support/index.html
@@ -52,6 +52,15 @@
                 For creating and maintaining <a href="https://www.reddit.com/u/optclinkbot" target="_blank">optclinkbot</a>
                 and working with us to expand its functionality to support Nakama Network!
             </dd>
+
+            <dt>
+                <a href="https://www.reddit.com/u/Ibbus93" target="_blank">Ibbus93</a>
+            </dt>
+            <dd>
+                For creating and maintaining <a href="https://optc-agenda.github.io/" target="_blank">OPTC-Agenda</a>
+                which powers Nakama Network's live/upcoming events display, and for adding Nakama Network links to the
+                agenda events!
+            </dd>
         </dl>
     </div>
 
