Adding GCR table.

--- a/Source/TreasureGuide.Web/src/views/stages/detail.html
+++ b/Source/TreasureGuide.Web/src/views/stages/detail.html
@@ -5,7 +5,7 @@
             <unit-display unit-id.bind="unitId"></unit-display>
         </div>
         <h1>
-            <global-display global.bind="global"></global-display>
+            <i class="fa fa-fw fa-globe" if.bind="global"></i>
             ${name}
         </h1>
         <h4>
