--- a/Source/TreasureGuide.Web/src/views/gcr/index.html
+++ b/Source/TreasureGuide.Web/src/views/gcr/index.html
@@ -1,8 +1,8 @@
 <template>
     <h1>Global Clear Rates</h1>
     <loading-area if.bind="loading"></loading-area>
-    <div if.bind="!loading">
-        <table with.bind="gcr" class="gcr">
+    <div class="gcr" if.bind="!loading">
+        <table with.bind="gcr">
             <thead>
                 <tr>
                     <th></th>
