Updating new lnf and adding fixed tables.

--- a/Source/TreasureGuide.Web/Views/GCR/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/GCR/Index.cshtml
@@ -5,90 +5,106 @@
     ViewData["Title"] = "Global Clear Rates";
 }
 
-<h2>@ViewData["Title"]</h2>
+<style>
+    body {
+        overflow: hidden !important;
+    }
+</style>
+<script type="text/javascript" src="./scripts/gcr_bundle.js"></script>
+
 <div class="gcr">
-    <table>
-        <thead>
-        <tr>
-            <th></th>
-            @foreach (var unit in Model.UnitIds)
-            {
-                <th>
-                    @if (unit.Thumbnail.HasValue)
+    <div class="header">
+        <h2>@ViewData["Title"]</h2>
+    </div>
+    <div class="body" id="gcr">
+        <table>
+            <thead>
+                <tr>
+                    <th class="stage-header"></th>
+                    @foreach (var unit in Model.UnitIds)
                     {
-                        <a href="/teams?leaderId=@unit.Id" target="_blank">
-                            <div class="unit-button" style="@(GCRHelper.GetBackgroundStyle(unit.Thumbnail))" title="@(unit.Name)" size="small">
-                            </div>
-                        </a>
+                        <th class="unit-header">
+                            @if (unit.Thumbnail.HasValue)
+                            {
+                                <a href="/teams?leaderId=@unit.Id" target="_blank">
+                                    <div class="unit-button" style="@(GCRHelper.GetBackgroundStyle(unit.Thumbnail))" title="@(unit.Name)" size="small">
+                                    </div>
+                                </a>
+                            }
+                            else
+                            {
+                                <a href="/teams?freeToPlay=1" target="_blank">
+                                    @(unit.Name)
+                                </a>
+                            }
+                        </th>
                     }
-                    else
-                    {
-                        <a href="/teams?freeToPlay=1" target="_blank">
-                            @(unit.Name)
-                        </a>
-                    }
-                </th>
-            }
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var stage in Model.StageIds)
-        {
-            <tr>
-                <th class="stage-display">
-                    <a href="/stages/@(stage.Id)/details" target="_blank">
-                        @if (stage.Thumbnail.HasValue)
-                        {
-                            <div class="unit-button" style="@(GCRHelper.GetBackgroundStyle(stage.Thumbnail))" size="tiny"></div>
-                        }
-                        else
-                        {
-                            <i class="fa fa-fw fa-map"></i>
-                        }
-                        @(GCRHelper.GetShortStageName(stage.Name))
-                    </a>
-                </th>
-                @foreach (var unit in Model.UnitIds)
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var stage in Model.StageIds)
                 {
-                    <td class="unit-display">
-                        <a href="/teams?stageId=@(stage.Id)&@(unit?.Id != null ? ("leaderId=" + unit.Id) : "freeToPlay=1")" target="_blank">
-                            @{
-                                var team = Model.Teams.SingleOrDefault(x => x.StageId == stage.Id && x.LeaderId == unit.Id);
-                                if (team != null && team.F2P && team.Global && team.Video)
+                    <tr>
+                        <th class="stage-header">
+                            <a href="/stages/@(stage.Id)/details" target="_blank">
+                                @if (stage.Thumbnail.HasValue)
                                 {
-                                    <span class="cell incomplete">
-                                        @if (team.F2P)
-                                        {
-                                            <i class="fa fa-fw fa-globe" title="Global"></i>
-                                        }
-                                        @if (team.F2P)
-                                        {
-                                            <i class="fa fa-fw fa-credit-card" title="Free-to-Play Crew"></i>
-                                        }
-                                        @if (team.Video)
-                                        {
-                                            <i class="fa fa-fw fa-video-camera" title="Has Videos"></i>
-                                        }
-                                    </span>
-                                }
-                                else if (team != null && (team.F2P || team.Global || team.Video))
-                                {
-                                    <span class="cell complete">
-                                        <i class="fa fa-fw fa-check" title="Complete!"></i>
-                                    </span>
+                                    <div class="unit-button" style="@(GCRHelper.GetBackgroundStyle(stage.Thumbnail))" size="tiny"></div>
                                 }
                                 else
                                 {
-                                    <span class="cell empty">
-                                        <i class="fa fa-fw fa-times" title="Missing"></i>
-                                    </span>
+                                    <i class="fa fa-fw fa-map"></i>
                                 }
+                                @(GCRHelper.GetShortStageName(stage.Name))
+                            </a>
+                        </th>
+                        @foreach (var unit in Model.UnitIds)
+                        {
+                            var team = Model.Teams.SingleOrDefault(x => x.StageId == stage.Id && x.LeaderId == unit.Id);
+                            var cellClass = "empty";
+                            if (team != null && team.F2P && team.Global && team.Video)
+                            {
+                                cellClass = "complete";
                             }
-                        </a>
-                    </td>
+                            else if (team != null && (team.F2P || team.Global || team.Video))
+                            {
+                                cellClass = "incomplete";
+                            }
+                            <td class="team-cell @(cellClass)">
+                                <a href="/teams?stageId=@(stage.Id)&@(unit?.Id != null ? ("leaderId=" + unit.Id) : "freeToPlay=1")" target="_blank">
+                                    @if (cellClass == "incomplete")
+                                    {
+                                        if (team.Global)
+                                        {
+                                            <i class="fa fa-fw fa-globe" title="Global"></i>
+                                        }
+                                        if (team.F2P)
+                                        {
+                                            <i class="fa fa-fw fa-credit-card" title="Free-to-Play Crew"></i>
+                                        }
+                                        if (team.Video)
+                                        {
+                                            <i class="fa fa-fw fa-video-camera" title="Has Videos"></i>
+                                        }
+                                    }
+                                    else if (cellClass == "complete")
+                                    {
+                                        <i class="fa fa-fw fa-check" title="Complete!"></i>
+                                    }
+                                    else
+                                    {
+                                        <span title="Missing">...</span>
+                                    }
+                                </a>
+                            </td>
+                        }
+                    </tr>
                 }
-            </tr>
-        }
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </div>
+
+<script type="text/javascript">
+    new FixedTable({ id: 'gcr' });
+</script>
