Updating build task.

--- a/Source/TreasureGuide.Web/Views/GCR/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/GCR/Index.cshtml
@@ -10,7 +10,7 @@
         overflow: hidden !important;
     }
 </style>
-<script type="text/javascript" src="./scripts/gcr_bundle.js"></script>
+<script type="text/javascript" src="./scripts/static/fixed_table.min.js"></script>
 
 <div class="gcr">
     <div class="header">
